<resources>
    <string name="app_name">Reciper</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="notifications">Notifications</string>
    <string name="string1">Login</string>
    <string name="string2">Email</string>
    <string name="string3">Enter your email</string>
    <string name="string4">Password</string>
    <string name="string5">Enter your Password</string>
    <string name="string6">No Account?</string>
    <string name="string7">Create Account</string>
    <string name="string8">Login with Google</string>
    <string name="api_Key">3b04e2dab63c451c8ebcaf214f6266b3</string>
    <string name="search">Search</string>
    <string name="search_your_recipes">search your recipes...</string>
    <string name="recent_recipes1">Recent Recipes</string>

    <string-array name="tags">
        <item>main course</item>
        <item>bread</item>
        <item>marinade</item>
        <item>side dish</item>
        <item>breakfast</item>
        <item>fingerfood</item>
        <item>dessert</item>
        <item>soup</item>
        <item>snack</item>
        <item>appetizer</item>
        <item>beverage</item>
        <item>drink</item>
        <item>salad</item>
        <item>sauce</item>
    </string-array>
</resources>