<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".Activity2">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="@string/string1"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/string2"
        android:textColor="#A4000000"
        android:textSize="18sp"
        android:textStyle="bold" />
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    android:id="@id/email_card"
    android:layout_below="@+id/email_text"
    android:layout_marginBottom="20dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp"
    >

    <EditText
        android:id="@+id/Email"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints="email"
        android:layout_below="@+id/login"
        android:layout_marginStart="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="21dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/baseline_mail_outline_24"
        android:drawablePadding="20dp"
        android:drawableTint="#92111111"
        android:hint="@string/string3"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textStyle="bold" />
</androidx.cardview.widget.CardView>




    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_card"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:text="@string/string4"
        android:textColor="#A4000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@id/password_card"
        android:layout_below="@+id/password_text"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        >

    <EditText
        android:id="@+id/Password"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints="email"
        android:layout_below="@+id/email"
        android:layout_marginStart="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="21dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        android:drawableTint="#92111111"
        android:hint="@string/string5"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:textStyle="bold"
        android:inputType="textPassword"
   />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:layout_width="329dp"
        android:layout_height="70dp"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_card"
        android:text="@string/string1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#042628"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/string6"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_account"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        android:text="@string/string7"
        android:textColor="#36868B"
        android:textSize="19sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton

        android:layout_width="329dp"
        android:layout_height="70dp"
        android:id="@+id/google_login_button"
        android:layout_below="@+id/create_account"
        android:text="@string/string8"
        android:drawableStart="@drawable/google"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="55dp"
        android:paddingEnd="55dp"
        app:cornerRadius="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#F06155"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
       />



</RelativeLayout>